# max-decoy

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  results.txt  run_splitup_and_identification.sh
db/: schema.sql
src/: main.rs
src/bio/: enzym.rs  mod.rs  notice.md  protein.rs
src/proteomic/: mod.rs
src/proteomic/models/: collection.rs  fasta_entry.rs  mod.rs  peptide.rs  peptide_position.rs  peptide_protein_association.rs  persistable.rs  protein.rs
src/proteomic/models/amino_acids/: amino_acid.rs  mod.rs  modification.rs
src/proteomic/models/decoys/: base_decoy.rs  decoy.rs  mod.rs  modified_decoy.rs  new_decoy.rs
src/proteomic/models/enzyms/: digest_enzym.rs  digest_summary.rs  mod.rs  transaction_summary.rs  trypsin.rs
src/proteomic/models/mass/: mod.rs  neutral_loss.rs
src/proteomic/models/peptides/: decoy.rs  mod.rs  modified_peptide.rs  peptide.rs  peptide_interface.rs
src/proteomic/models/tests/: mod.rs  protein.rs
src/proteomic/tasks/: digestion.rs  identification.rs  indentification.rs  mod.rs  sequence_mass.rs
src/proteomic/utility/: amino_acid.rs  comet_parameter.rs  database_connection.rs  decoy_generator.rs  enzym.rs  mass.rs  mod.rs  mz_ml_reader.rs
src/proteomic/utility/combinations/: mod.rs  n_choose_k.rs
src/proteomic/utility/enzyms/: digest_enzym.rs  mod.rs  trypsin.rs
src/proteomic/utility/input_file_digester/: fasta_digester.rs  file_digester.rs  mod.rs
src/tests/: digest.rs  mod.rs
src/tests/models/: collection.rs  mod.rs  peptide.rs  peptide_protein_accession.rs  protein.rs
(+20 files in other folders)
