[package]
name = "max_decoy"
version = "0.1.0"
authors = ["Dirk Winkelhardt <dirk.winkelhardt@gmail.com>"]

[dependencies]
onig = "4.2.0"
time = "0.1.40"
postgres = "0.15.2"
dotenv = "0.13.0"
num_cpus = "1.8.0"
threadpool = "1.7.1"
clap = "2.32.0"
csv = "1.0.5"
postgres_array = "0.9.0"
rand = "0.6.1"
quick-xml = "0.13.2"
sha1 = "0.6.0"